Fix styling on safari

--- a/app/style/main.css
+++ b/app/style/main.css
@@ -75,7 +75,7 @@ html {
     animation: logo-out ease-in 400ms;
 }
 
-.text {
+.loader>.text {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -86,11 +86,11 @@ html {
     animation: fade-out ease-in 400ms;
 }
 
-#title.animate-breathe {
+.loader>.text>#title.animate-breathe {
     animation: breathe ease-in 2s infinite;
 }
 
-#title {
+.loader>.text>#title {
     font-family: monospace;
     font-size: 48px;
     margin: 0px;
